--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.32.2",
     "@clerk/themes": "^2.4.21",
     "@prisma/client": "^6.16.2",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "prisma": "^6.16.2",
     "react": "19.1.0",
